--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,31 @@
             <artifactId>spring-cloud-starter-contract-verifier</artifactId>
             <scope>test</scope>
         </dependency>
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-rest-hal-browser</artifactId>
+            </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-data-rest</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-bean-validators</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -67,7 +92,7 @@
                 <version>1.1.0.RELEASE</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <baseClassForTests>org.edu.srp.MvcTest</baseClassForTests>
+                    <baseClassForTests>org.edu.srp.MvcBase</baseClassForTests>
                 </configuration>
             </plugin>
         </plugins>
