add hystrix dashboard

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>config-server</module>
         <module>eureka-service</module>
         <module>api-gateway</module>
+        <module>hystrix-dashboard</module>
     </modules>
 
 </project>
